# py-classes-patterns

./: README.md  pyproject.toml
classes/_attrs/: __init__.py  composition.py  default_values.py  id_vo.py  inheritance.py  union_types_casting.py
classes/_attrs/tests/: test_composition.py  test_default_values.py  test_id_vo.py  test_inheritance.py  test_union_types_casting.py
classes/_cattr/: __init__.py  composition.py  union_types_casting.py
classes/_cattr/tests/: test_composition.py  test_inheritance.py  test_union_types_casting.py
classes/_cattrs/: __init__.py
classes/_cattrs/tests/: test_inheritance.py
classes/_dataclasses/: __init__.py  composition.py  default_values.py  id_vo.py  inheritance.py  union_types_casting.py
classes/_dataclasses/tests/: test_composition.py  test_default_values.py  test_id_vo.py  test_inheritance.py  test_union_types_casting.py
classes/_pydantic/: __init__.py  composition_strict_types.py  composition_types.py  default_values_vo.py  id_vo.py  inheritance_strict_types.py  inheritance_types.py  union_types_casting.py
classes/_pydantic/tests/: test_composition_strict_types.py  test_composition_types.py  test_dafault_values_inheritance.py  test_dafault_values_vo.py  test_id_vo.py  test_inheritance_strict_types.py  test_inheritance_types.py  test_inheritance_vo.py  test_union_types_casting.py
classes/default_values/attrs/: test_default_values_attrs.py
classes/default_values/dataclasses/: dataclasses.py  test_default_values_dataclasses.py
classes/native/: __init__.py  id_vo.py
classes/value_objects/: README.md
(+26 files in other folders)
